# thermostat

./: .gitignore  CMakeLists.txt  README.md  gctrl.hpp  gctrl_udp_driver_windows.cpp  main.cpp  thermostat.cpp  thermostat.ctrl  thermostat.sln  thermostat.vcxproj  thermostat.vcxproj.filters  thermostat_simple.ctrl  udp_driver.hpp  udp_driver_windows.cpp
